--- a/html/sistema_matriculas.html
+++ b/html/sistema_matriculas.html
@@ -23,10 +23,10 @@
             <div class="descripcion_materia">descripcion</div>
     
             <div class="buttons">
-                <button class="button-inside" id="detalles-link" data-id="" title="editar estudiante">
+                <button class="button-inside" id="editar" data-id="" title="editar estudiante">
                     <i class="ri-edit-circle-line"></i>
                 </button>
-                <button class="button-inside" id="detalles-link" data-id="" title="ver detalles del estudiante">
+                <button class="button-inside" id="detalles" data-id="" title="ver detalles del estudiante">
                     <i class="ri-info-card-line"></i>
                 </button>
             </div>
