--- a/html/editar_materia.html
+++ b/html/editar_materia.html
@@ -22,22 +22,27 @@
         </div>
         <div class="form-group">
             <label for="codigo">Código</label>
-            <input type="text" id="codigo" name="codigo" required />
+            <input type="text" id="codigo" name="codigo" readonly />
         </div>
         <div class="form-group">
             <label for="descripcion">Descripción</label>
             <textarea id="descripcion" name="descripcion" rows="4" required></textarea>
         </div>
         <div class="form-buttons">
-            <button type="submit" class="button-inside">Guardar Cambios</button>
+            <button type="submit" class="button-inside" id="save">Guardar Cambios</button>
             <button type="button" class="button-inside" id="cancel-button">Cancelar</button>
         </div>
     </form>
 </main>
-<script src="../js/editar_materia.js" type="module"></script>
+<script src="../js/api.js"></script>
+<script src="../js/editar.js"></script>
 <script>
     document.getElementById('back-button').addEventListener('click', () => {
         window.location.href = 'sistema_matriculas.html';
+    });
+
+    document.getElementById('cancel-button').addEventListener('click', () => {
+        window.location.href = 'sistema_matriculas.html'; // Redirigir al sistema de matrículas
     });
 </script>
 </body>
