--- a/html/editar_materia.html
+++ b/html/editar_materia.html
@@ -42,7 +42,7 @@
     });
 
     document.getElementById('cancel-button').addEventListener('click', () => {
-        window.location.href = 'sistema_matriculas.html'; // Redirigir al sistema de matrículas
+        window.location.href = 'sistema_matriculas.html'; 
     });
 </script>
 </body>
